Remove first job fix spacing.

--- a/src/resume.css
+++ b/src/resume.css
@@ -5,7 +5,7 @@ body {
 }
 
 p, ul {
-  margin: .1em 0;
+  margin: .3em 0;
 }
 
 ul {
